--- a/lições/lição3.html
+++ b/lições/lição3.html
@@ -11,9 +11,11 @@
         <h2>Lição 3: Conclusão do Curso</h2>
         <p>Parabéns! Você completou todas as lições do curso de Estudo Musical Progressivo.</p>
         <p>Esperamos que você tenha aprendido muito e se divertido ao longo do caminho. Continue praticando e explorando o mundo da música!</p>
-        <p>Se você tiver qualquer dúvida ou quiser continuar seus estudos, sinta-se à vontade para entrar em contato conosco.</p>
-        <p>Obrigado por participar e bons estudos!</p>
         <button onclick="loadLesson('lição1')">Recomeçar Curso</button>
-    </section>
+        <button onclick="loadCertificate()">Emitir Certificado</button>
+        <button onclick="loadFinalPage()">Finalizar</button>
+      </section>
+      
+      
 </body>
 </html>
