--- a/certificate.html
+++ b/certificate.html
@@ -28,6 +28,13 @@
       font-size: 18px;
       margin-bottom: 20px;
     }
+    .certificate input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
     .certificate button {
       padding: 10px 20px;
       background-color: #4CAF50;
@@ -45,9 +52,34 @@
   <div class="certificate">
     <h1>Certificado de Conclusão</h1>
     <p>Este certificado é concedido a:</p>
-    <p><strong>[Nome do Aluno]</strong></p>
+    <input type="text" id="name" placeholder="Digite seu nome">
+    <input type="text" id="cpf" placeholder="Digite seu CPF">
     <p>Por completar com sucesso o curso de Estudo Musical Progressivo.</p>
-    <button onclick="window.print()">Imprimir Certificado</button>
+    <p>Data: <span id="date"></span></p>
+    <button onclick="printCertificate()">Imprimir Certificado</button>
   </div>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const today = new Date();
+      const date = today.toLocaleDateString('pt-BR', {
+        day: '2-digit',
+        month: '2-digit',
+        year: 'numeric'
+      });
+      document.getElementById('date').textContent = date;
+    });
+
+    function printCertificate() {
+      const name = document.getElementById('name').value;
+      const cpf = document.getElementById('cpf').value;
+
+      if (name && cpf) {
+        window.print();
+      } else {
+        alert('Por favor, preencha seu nome e CPF.');
+      }
+    }
+  </script>
 </body>
 </html>
