--- a/certificate.html
+++ b/certificate.html
@@ -56,7 +56,7 @@
     <input type="text" id="cpf" placeholder="Digite seu CPF">
     <p>Por completar com sucesso o curso de Estudo Musical Progressivo.</p>
     <p>Data: <span id="date"></span></p>
-    <button onclick="printCertificate()">Imprimir Certificado</button>
+    <button onclick="generateCertificate()">Gerar Certificado</button>
   </div>
 
   <script>
@@ -70,12 +70,23 @@
       document.getElementById('date').textContent = date;
     });
 
-    function printCertificate() {
+    function generateCertificate() {
       const name = document.getElementById('name').value;
       const cpf = document.getElementById('cpf').value;
 
       if (name && cpf) {
-        window.print();
+        const certificateContent = `
+          <div class="certificate">
+            <h1>Certificado de Conclusão</h1>
+            <p>Este certificado é concedido a:</p>
+            <p><strong>${name}</strong></p>
+            <p>CPF: ${cpf}</p>
+            <p>Por completar com sucesso o curso de Estudo Musical Progressivo.</p>
+            <p>Data: ${document.getElementById('date').textContent}</p>
+            <button onclick="window.print()">Imprimir Certificado</button>
+          </div>
+        `;
+        document.body.innerHTML = certificateContent;
       } else {
         alert('Por favor, preencha seu nome e CPF.');
       }
